<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_baseline_school_24"/>

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/nisUsernameInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/nis_username"/>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/passwordInput"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
</LinearLayout>